--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,8 @@ languageCode = "pl-PL"
 portraitPhotoWidths = [1500, 1000, 750]
 theme = "sc_aw_premium"
 title = "AW premium"
+[[cascade]]
+slug = '{{ $seed := .Filename }}{{ $random := delimit (shuffle (split (md5 $seed) "" )) "" }}{{ $random }}'
 [params]
 description = ""
 email_header = "kontakt@agencjawroclawska.pl"
