--- a/data/contacts/karol.yml
+++ b/data/contacts/karol.yml
@@ -1,5 +1,5 @@
 ---
 title: Karol
-imi__i_nazwisko: Karol
-email: 
-telefon:
+imi__i_nazwisko: Karol Gucwa
+email: k.gucwa@agencjawroclawska.pl
+telefon: +48111 111 111
