--- a/.forestry/front_matter/templates/wpis.yml
+++ b/.forestry/front_matter/templates/wpis.yml
@@ -5,6 +5,9 @@ fields:
 - type: text
   name: Title
   label: Title
+- type: text
+  name: Domena
+  label: Domena
 - name: vimeo_embed_code
   type: textarea
   config:
